@@ -3,6 +3,8 @@ Changes in version 0.2.7 - UNRELEASED
    exchange outside of the main event loop.  Patch by Yawning Angel.
  - Support gmpy2 if it is available in addition to gmpy.
    Patch by Yawning Angel.
+ - Add support for using py-uniformdh (https://github.com/Yawning/py-uniformdh).
+   Patch by Yawning Angel.
 
 
 Changes in version 0.2.6 - 2014-02-03
